# allennlp-sample

./: default.nix  pyproject.toml  requirements.txt  shell.nix
.github/workflows/: test.yml
data/: test.text.trimmed.tsv  train.text.trimmed.tsv
my_project/: app.py  dataset_reader.py  predict.py
results/: best.th  config.json  metrics_epoch_0.json  metrics_epoch_1.json  metrics_epoch_2.json  metrics_epoch_3.json  metrics_epoch_4.json  model_state_epoch_3.th  model_state_epoch_4.th  training_state_epoch_3.th  training_state_epoch_4.th
results/log/train/: events.out.tfevents.1605077049.pop-os  events.out.tfevents.1605108085.pop-os
results/log/validation/: events.out.tfevents.1605077049.pop-os  events.out.tfevents.1605108085.pop-os
results/vocabulary/: tokens.txt
training_config/: my_model_trained_on_my_dataset.jsonnet
